Fix copyright year and privacy policy links for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -269,10 +269,10 @@
             <div class="footer-info">
                 <span>Based in Waterloo</span>
                 <span>•</span>
-                <span>&copy; 2024 Elderella Inc.</span>
+                <span>&copy; 2025 Elderella Inc.</span>
             </div>
             <div class="footer-links">
-                <a href="/privacy.html">Privacy Policy</a>
+                <a href="privacy.html">Privacy Policy</a>
             </div>
         </div>
     </footer>
