--- a/privacy.html
+++ b/privacy.html
@@ -165,8 +165,8 @@
 <body>
     <header class="header">
         <div class="header-content">
-            <a href="/" class="logo">Elderella</a>
-            <a href="/" class="back-link">← Back to Home</a>
+            <a href="index.html" class="logo">Elderella</a>
+            <a href="index.html" class="back-link">← Back to Home</a>
         </div>
     </header>
 
