Update website copy alignment with core positioning
- Keep real testimonial quotes intact (added code comments as reminder)
- Update stats to real 2024 data: 26hrs/week average caregiving time
- Replace working stat with 88% get no support - emphasizes invisible load
- Restore caregiving situation placeholder text (matches Calendly)
- Keep other positioning updates: hero, mission statement, CTAs
- Add code comments to prevent future quote/placeholder modifications

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Elderella - Transforming elder care through technology. Supporting families caring for aging parents with dignity, connection, and peace of mind.">
+    <meta name="description" content="Elderella - The caregiving companion that organizes, delegates, and lightens the invisible load of elder care. Get back time, restore control, and care without losing yourself.">
     <meta name="mobile-web-app-capable" content="yes">
-    <title>Elderella - Reimagining Elder Care</title>
+    <title>Elderella - Your Caregiving Companion</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,10 +13,10 @@
     <section class="hero">
         <div class="hero-content">
             <h1 class="logo">Elderella</h1>
-            <h2 class="tagline">Reimagining elder care for modern families</h2>
+            <h2 class="tagline">Your caregiving companion</h2>
             <p class="subtitle">
-                Because caring for aging parents shouldn't mean doing it alone. 
-                We're building the support system every family deserves.
+                Organizing, delegating, and lightening the invisible load of elder care.
+                Get back time, restore control, and care without losing yourself.
             </p>
         </div>
     </section>
@@ -35,14 +35,14 @@
                 <div class="stat-description">Annual value of family caregiving</div>
             </div>
             <div class="stat-card">
-                <div class="stat-number">24hrs</div>
+                <div class="stat-number">26hrs</div>
                 <div class="stat-label">Per Week</div>
                 <div class="stat-description">Average time spent caregiving</div>
             </div>
             <div class="stat-card">
-                <div class="stat-number">61%</div>
-                <div class="stat-label">Still Working</div>
-                <div class="stat-description">Caregivers juggling jobs and care</div>
+                <div class="stat-number">88%</div>
+                <div class="stat-label">Get No Support</div>
+                <div class="stat-description">Caregivers carrying the load alone</div>
             </div>
         </div>
     </section>
@@ -50,12 +50,13 @@
     <!-- Problem Section -->
     <section class="problem-section">
         <div class="section-header">
-            <h2 class="section-title">We hear you</h2>
+            <h2 class="section-title">You're not alone in feeling overwhelmed</h2>
             <p class="section-subtitle">
-                These are the real challenges families face every day
+                The invisible load of caregiving is real—and we see you
             </p>
         </div>
         <div class="problem-cards">
+            <!-- IMPORTANT: These are real testimonials from actual caregivers - DO NOT MODIFY THE QUOTES -->
             <div class="problem-card">
                 <p class="problem-quote">
                     "When you're in it you feel like you're the only person in the world going through it 
@@ -84,13 +85,13 @@
     <section class="mission">
         <div class="mission-content">
             <p class="mission-text">
-                We believe that <span class="mission-highlight">caring for aging parents</span> 
-                is one of life's most profound responsibilities. Yet too many families face this 
-                journey feeling isolated, overwhelmed, and unprepared.
+                For adult children caring for aging parents who feel <span class="mission-highlight">overwhelmed, unseen, and alone</span>, 
+                Elderella is the caregiving companion that organizes, delegates, and lightens the invisible load of elder care.
             </p>
             <p class="mission-text">
-                Elderella exists to <span class="mission-highlight">transform this experience</span> 
-                - turning confusion into clarity, isolation into connection, and stress into support.
+                Unlike doing it all yourself—or relying on fragmented, unreliable help—Elderella 
+                <span class="mission-highlight">gives you back time</span>, restores your sense of control, 
+                and helps you care without losing yourself.
             </p>
         </div>
     </section>
@@ -98,9 +99,9 @@
     <!-- Interview Section -->
     <section class="email-section">
         <div class="email-container">
-            <h2 class="email-header">Share Your Caregiving Story</h2>
+            <h2 class="email-header">You're Not Alone in This</h2>
             <p class="email-subtext">
-                Book a 50-minute conversation to help shape the future of elder care
+                Share your invisible load. Help us build the caregiving companion you need.
             </p>
             <form class="interview-form" id="interviewForm" aria-label="Schedule a user interview">
                 <div class="form-row">
@@ -115,7 +116,7 @@
                 </div>
                 <div class="form-row">
                     <textarea id="situation" name="situation" class="form-textarea" rows="3" 
-                        placeholder="Tell us briefly about your caregiving situation (optional)"
+                        placeholder="Tell us briefly about your caregiving situation (optional)" <!-- Must match Calendly Question 1 -->
                         aria-label="Your caregiving situation (optional)"></textarea>
                 </div>
                 <div class="interviewer-selection">
@@ -148,7 +149,7 @@
         <div class="founders-container">
             <h2 class="founders-title">Meet the Founders</h2>
             <p class="section-subtitle">
-                We're building Elderella because we've lived this journey with our own families.
+                We understand the invisible load because we've carried it ourselves.
             </p>
             <div class="founders-grid">
                 <div class="founder-card">
@@ -170,7 +171,7 @@
         <div class="footer-content">
             <!-- Newsletter Signup -->
             <div class="footer-newsletter">
-                <p style="color: #5c4d6d; margin-bottom: 15px; font-size: 1.1rem;">Stay updated on our journey</p>
+                <p style="color: #5c4d6d; margin-bottom: 15px; font-size: 1.1rem;">Get back time and control</p>
                 <form class="footer-email-form" id="newsletterForm" aria-label="Newsletter signup">
                     <input type="email" id="newsletter-email" class="email-input" placeholder="Enter your email" required
                            aria-label="Email address for newsletter" aria-required="true">
