--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                         Elderella lightens the<br>
                         invisible load of Elder care<br>
                         by planning, organizing,<br>
-                        delegating, and following<br>
-                        up. Away the invisible to-do<br>
-                        that weighs you down.
+                        delegating, and sweeping<br>
+                        away the endless to-dos<br>
+                        that weigh you down.
                     </p>
                     
                     <img src="images/elderella-sparkle.svg" alt="Elderella sparkle" class="star-icon">
@@ -42,7 +42,7 @@
                     <div class="stats-grid">
                         <div class="stat-card">
                             <div class="stat-number">53 million</div>
-                            <div class="stat-label">of Caregivers</div>
+                            <div class="stat-label">Family Caregivers</div>
                             <div class="stat-description">Americans caring for<br>aging loved ones</div>
                         </div>
                         <div class="stat-card">
@@ -104,9 +104,9 @@
         <div class="container">
             <div class="carrying-text">
                 <h2>You're carrying a lot.</h2>
-                <p class="subtitle">
+                <p class="text">
                     Juggling careers, kids, and the relentless<br>
-                    needs of Elder care while feeling anxious,<br>
+                    needs of Elder care often feels impossibly<br>
                     heavy—isolating, exhausting, and lonely.
                 </p>
                 <p class="text">
@@ -133,22 +133,21 @@
     <section class="testimonials-section">
         <div class="container">
             <div class="testimonial-card">
-                <p>"When you're in it you feel like you're<br>
-                the only person in the world going<br>
-                through it and there's no answers<br>
+                <p>"When you're in it you feel like you're 
+                the only person in the world going 
+                through it and there's no answers 
                 because it's just you and them."</p>
                 <span class="author">Sarah, 45</span>
             </div>
             <div class="testimonial-card">
-                <p>"Coordinating between my siblings<br>
-                about Dad's care is exhausting. We're all<br>
-                trying to help but nobody's on the same<br>
-                page."</p>
+                <p>"Coordinating between my siblings 
+                about Dad's care is exhausting. We're all trying 
+                to help but nobody's on the same page."</p>
                 <span class="author">Michael, 52, Teacher</span>
             </div>
             <div class="testimonial-card">
-                <p>"I had to reduce my work hours to care<br>
-                for my parents. The financial stress is<br>
+                <p>"I had to reduce my work hours to care 
+                for my parents. The financial stress is 
                 overwhelming."</p>
                 <span class="author">Jennifer, 48, Marketing Director</span>
             </div>
@@ -159,19 +158,18 @@
     <section class="not-alone-section">
         <div class="container">
             <div class="not-alone-content">
-                <h2>You're not alone.</h2>
-                <p class="bold">
+                <h2>You're not alone.</p>
                     Stop doing it all yourself,<br>
                     or relying on fragmented,<br>
-                    unreliable help.
+                    unreliable help.</h2>
                 </p>
                 <p>
                     Elderella lifts weight off your shoulders<br>
                     by bringing your circle of care together<br>
-                    across coordinated families.
+                    in one coordinated system.
                 </p>
                 <p>
-                    It restores your sense of context, frees<br>
+                    It restores your sense of control, frees<br>
                     up your precious time and energy, and<br>
                     turns Elder care chaos into calm.
                 </p>
@@ -227,7 +225,7 @@
                 <a href="privacy.html">Privacy Policy</a>
                 <span>© 2025 Elderella Inc.</span>
                 <a href="https://www.linkedin.com/in/company/elderella/" target="_blank">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="#9ca3af">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="#FFFFF4">
                         <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
                     </svg>
                 </a>
