second commit primarily spacing fixes

--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
     <!-- Hero Section -->
     <section class="hero-section">
         <!-- Full-bleed image outside container -->
-        <picture>
-  <source srcset="images/women-hugging-thankful.webp" type="image/webp">
-  <source srcset="images/women-hugging-thankful.jpg" type="image/jpeg">
-  <img 
-    src="images/women-hugging-thankful.jpg" 
-    alt="Women hugging so thankful" 
-    class="hero-image-bleed" 
-    loading="lazy">
-</picture>
+        
         <div class="container">
             <div class="hero-content">
+                <picture>
+                    <source srcset="images/women-hugging-thankful.webp" type="image/webp">
+                    <source srcset="images/women-hugging-thankful.jpg" type="image/jpeg">
+                    <img src="images/women-hugging-thankful.jpg" 
+                        alt="Women hugging so thankful" 
+                        class="hero-image-bleed" 
+                                loading="lazy">
+                        </picture>
                 <div class="hero-text">
                     <h1 class="hero-title">Your Elder care<br>administrator</h1>
                     <p class="hero-subtitle">
@@ -107,53 +107,54 @@
     </section>
 
     <!-- Carrying Section -->
-    <section class="carrying-section">
-        <div class="container">
-            <div class="carrying-text">
-                <h2>You're carrying a lot.</h2>
-                <p class="text">
-                    Juggling careers, kids, and the relentless<br>
-                    needs of Elder care often feels impossibly<br>
-                    heavy—isolating, exhausting, and lonely.
-                </p>
-                <p class="text">
-                    Long lists, family tensions, and sleepless<br>
-                    nights pile on, until the burden feels too much<br>
-                    to carry.
-                </p>
-                <p class="text">
-                    Even when you're giving everything you have.
-                </p>
-            </div>
-        </div>
-        
-        <!-- Full-bleed images outside container -->
-        <div class="image-grid-bleed">
-            <picture>
-                <source srcset="images/man-driving-elder.webp" type="image/webp">
-                <source srcset="images/man-driving-elder.jpg" type="image/jpeg">
-                <img src="images/man-driving-elder.jpg" alt="Man driving elder" loading="lazy">
-            </picture>
+<section class="carrying-section">
+  <div class="container">
+    <div class="carrying-text">
+      <h2>You're carrying a lot.</h2>
+      <p class="text">
+        Juggling careers, kids, and the relentless<br>
+        needs of Elder care often feels impossibly<br>
+        heavy—isolating, exhausting, and lonely.
+      </p>
+      <p class="text">
+        Long lists, family tensions, and sleepless<br>
+        nights pile on, until the burden feels too much<br>
+        to carry.
+      </p>
+      <p class="text">
+        Even when you're giving everything you have.
+      </p>
+    </div>
 
-            <picture>
-                <source srcset="images/woman-grocery-shopping-alone.webp" type="image/webp">
-                <source srcset="images/woman-grocery-shopping-alone.jpg" type="image/jpeg">
-                <img src="images/woman-grocery-shopping-alone.jpg" alt="Woman grocery shopping alone" loading="lazy">
-            </picture>
+    <!-- Gallery images INSIDE container -->
+    <div class="image-grid-bleed">
+      <picture>
+        <source srcset="images/man-driving-elder.webp" type="image/webp">
+        <source srcset="images/man-driving-elder.jpg" type="image/jpeg">
+        <img src="images/man-driving-elder.jpg" alt="Man driving elder" loading="lazy">
+      </picture>
 
-            <picture>
-                <source srcset="images/woman-paying-bills.webp" type="image/webp">
-                <source srcset="images/woman-paying-bills.jpg" type="image/jpeg">
-                <img src="images/woman-paying-bills.jpg" alt="Woman paying bills" loading="lazy">
-            </picture>
+      <picture>
+        <source srcset="images/woman-grocery-shopping-alone.webp" type="image/webp">
+        <source srcset="images/woman-grocery-shopping-alone.jpg" type="image/jpeg">
+        <img src="images/woman-grocery-shopping-alone.jpg" alt="Woman grocery shopping alone" loading="lazy">
+      </picture>
 
-            <picture>
-                <source srcset="images/playing-cards-with-elder.webp" type="image/webp">
-                <source srcset="images/playing-cards-with-elder.jpg" type="image/jpeg">
-                <img src="images/playing-cards-with-elder.jpg" alt="Playing cards with elder" loading="lazy">
-            </picture>
-</div>
-    </section>
+      <picture>
+        <source srcset="images/woman-paying-bills.webp" type="image/webp">
+        <source srcset="images/woman-paying-bills.jpg" type="image/jpeg">
+        <img src="images/woman-paying-bills.jpg" alt="Woman paying bills" loading="lazy">
+      </picture>
+
+      <picture>
+        <source srcset="images/playing-cards-with-elder.webp" type="image/webp">
+        <source srcset="images/playing-cards-with-elder.jpg" type="image/jpeg">
+        <img src="images/playing-cards-with-elder.jpg" alt="Playing cards with elder" loading="lazy">
+      </picture>
+    </div>
+  </div>
+</section>
+
 
     <!-- Testimonials -->
     <section class="testimonials-section">
