style(v2): scope header logo selector and add intrinsic image dimensions

--- a/v2/index.html
+++ b/v2/index.html
@@ -23,7 +23,7 @@
     <header class="site-header">
         <div class="container header-container">
             <a href="index.html" class="logo">
-                <img src="images/elderella-logo.svg" alt="Elderella">
+                <img src="images/elderella-logo.svg" alt="Elderella" width="232" height="112">
             </a>
             <nav class="main-nav">
                 <a href="explore.html">Explore</a>
