chore(v2): add width/height to new SVG logo for CLS

--- a/v2/index.html
+++ b/v2/index.html
@@ -23,7 +23,7 @@
     <header class="site-header">
         <div class="container header-container">
             <a href="index.html" class="logo">
-                <img src="images/elderella-logo-header.svg" alt="Elderella">
+                <img src="images/elderella-logo-header.svg" alt="Elderella" width="709" height="300">
             </a>
             <nav class="main-nav">
                 <a href="explore.html">Explore</a>
