feat(v2): add share-responsibility-graphic to right column and bias it to the right; responsive tweaks for tablet/mobile

--- a/v2/index.html
+++ b/v2/index.html
@@ -127,7 +127,15 @@
                     <a href="#" class="btn-try-free">Try it for free</a>
                 </div>
                 <div class="responsibility-image">
-                    <!-- Image placeholder for right side -->
+                    <img
+                        src="images/share-responsibility-graphic.png"
+                        alt="Care team illustration with detected contacts"
+                        class="share-graphic"
+                        width="509"
+                        height="425"
+                        decoding="async"
+                        loading="lazy"
+                    />
                 </div>
             </div>
         </div>
