chore(v2): standardize Share Responsibility image to 1000w + @2x, use .feature-graphic, remove old .share-graphic sizing

--- a/v2/index.html
+++ b/v2/index.html
@@ -104,7 +104,16 @@
         <div class="container">
             <div class="partner-card">
                 <div class="partner-image">
-                    <!-- Image placeholder for left side -->
+                    <img
+                        src="images/partner-graphic.png"
+                        srcset="images/partner-graphic.png 1x, images/partner-graphic@2x.png 2x"
+                        width="1000"
+                        height="933"
+                        alt="Caregiving partner illustration"
+                        class="feature-graphic partner-graphic"
+                        loading="lazy"
+                        decoding="async"
+                    />
                 </div>
                 <div class="partner-content">
                     <span class="partner-pill">Ella</span>
@@ -129,12 +138,13 @@
                 <div class="responsibility-image">
                     <img
                         src="images/share-responsibility-graphic.png"
+                        srcset="images/share-responsibility-graphic.png 1x, images/share-responsibility-graphic@2x.png 2x"
+                        width="1000"
+                        height="835"
                         alt="Care team illustration with detected contacts"
-                        class="share-graphic"
-                        width="509"
-                        height="425"
-                        decoding="async"
+                        class="feature-graphic responsibility-graphic"
                         loading="lazy"
+                        decoding="async"
                     />
                 </div>
             </div>
@@ -146,7 +156,16 @@
         <div class="container">
             <div class="capture-card">
                 <div class="capture-image">
-                    <!-- Image placeholder for left side -->
+                    <img
+                        src="images/capture-graphic.png"
+                        srcset="images/capture-graphic.png 1x, images/capture-graphic@2x.png 2x"
+                        width="1000"
+                        height="704"
+                        alt="Capture notes and documents illustration"
+                        class="feature-graphic capture-graphic"
+                        loading="lazy"
+                        decoding="async"
+                    />
                 </div>
                 <div class="capture-content">
                     <span class="capture-pill">Notes & Documents</span>
@@ -169,7 +188,16 @@
                     <a href="#" class="btn-try-free">Try it for free</a>
                 </div>
                 <div class="meds-image">
-                    <!-- Image placeholder for right side -->
+                    <img
+                        src="images/meds-graphic.png"
+                        srcset="images/meds-graphic.png 1x, images/meds-graphic@2x.png 2x"
+                        width="1000"
+                        height="886"
+                        alt="Medications illustration"
+                        class="feature-graphic meds-graphic"
+                        loading="lazy"
+                        decoding="async"
+                    />
                 </div>
             </div>
         </div>
@@ -180,7 +208,16 @@
         <div class="container">
             <div class="remember-card">
                 <div class="remember-image">
-                    <!-- Image placeholder for left side -->
+                    <img
+                        src="images/remember-graphic.png"
+                        srcset="images/remember-graphic.png 1x, images/remember-graphic@2x.png 2x"
+                        width="1000"
+                        height="842"
+                        alt="Tasks and calendar illustration"
+                        class="feature-graphic remember-graphic"
+                        loading="lazy"
+                        decoding="async"
+                    />
                 </div>
                 <div class="remember-content">
                     <span class="remember-pill">Tasks & Calendar</span>
