--- a/v2/index.html
+++ b/v2/index.html
@@ -384,7 +384,52 @@
             <div class="footer-bottom">
                 <div class="footer-social">
                     <h4>Connect with us</h4>
-                    <!-- Social icons placeholder -->
+                    <div class="footer-social-icons">
+                        <a href="#" aria-label="Facebook">
+                            <img
+                                src="images/facebook.png"
+                                srcset="images/facebook.png 1x, images/facebook@2x.png 2x"
+                                width="28"
+                                height="35"
+                                alt="Facebook"
+                                loading="lazy"
+                                decoding="async"
+                            >
+                        </a>
+                        <a href="#" aria-label="Instagram">
+                            <img
+                                src="images/instagram.png"
+                                srcset="images/instagram.png 1x, images/instagram@2x.png 2x"
+                                width="28"
+                                height="36"
+                                alt="Instagram"
+                                loading="lazy"
+                                decoding="async"
+                            >
+                        </a>
+                        <a href="#" aria-label="LinkedIn">
+                            <img
+                                src="images/linkedin.png"
+                                srcset="images/linkedin.png 1x, images/linkedin@2x.png 2x"
+                                width="29"
+                                height="36"
+                                alt="LinkedIn"
+                                loading="lazy"
+                                decoding="async"
+                            >
+                        </a>
+                        <a href="#" aria-label="X">
+                            <img
+                                src="images/x.png"
+                                srcset="images/x.png 1x, images/x@2x.png 2x"
+                                width="29"
+                                height="36"
+                                alt="X"
+                                loading="lazy"
+                                decoding="async"
+                            >
+                        </a>
+                    </div>
                 </div>
                 <div class="footer-newsletter">
                     <h4>Family elder care—right to your inbox</h4>
