--- a/v2/index.html
+++ b/v2/index.html
@@ -385,7 +385,7 @@
                 <div class="footer-social">
                     <h4>Connect with us</h4>
                     <div class="footer-social-icons">
-                        <a href="#" aria-label="Facebook">
+                        <a href="https://www.facebook.com/ElderellaCare/" aria-label="Facebook" target="_blank" rel="noopener noreferrer">
                             <img
                                 src="images/facebook.png"
                                 srcset="images/facebook.png 1x, images/facebook@2x.png 2x"
@@ -396,7 +396,7 @@
                                 decoding="async"
                             >
                         </a>
-                        <a href="#" aria-label="Instagram">
+                        <a href="https://www.instagram.com/elderellacare/" aria-label="Instagram" target="_blank" rel="noopener noreferrer">
                             <img
                                 src="images/instagram.png"
                                 srcset="images/instagram.png 1x, images/instagram@2x.png 2x"
@@ -407,7 +407,7 @@
                                 decoding="async"
                             >
                         </a>
-                        <a href="#" aria-label="LinkedIn">
+                        <a href="https://www.linkedin.com/company/elderella/" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer">
                             <img
                                 src="images/linkedin.png"
                                 srcset="images/linkedin.png 1x, images/linkedin@2x.png 2x"
@@ -418,7 +418,7 @@
                                 decoding="async"
                             >
                         </a>
-                        <a href="#" aria-label="X">
+                        <a href="https://x.com/ElderellaCare" aria-label="X" target="_blank" rel="noopener noreferrer">
                             <img
                                 src="images/x.png"
                                 srcset="images/x.png 1x, images/x@2x.png 2x"
