--- a/v2/index.html
+++ b/v2/index.html
@@ -52,20 +52,19 @@
 
             <div id="primary-navigation" class="primary-navigation" data-open="false">
                 <nav class="main-nav">
-                    <a href="explore.html">Explore</a>
-                    <a href="early-access.html">Early Access</a>
+                    <a href="explore.html">How We Help</a>
                     <a href="faq.html">FAQ</a>
                 </nav>
-                <a href="signup.html" class="btn-signup">Sign up</a>
+                <a href="signup.html" class="btn-signup">Start for free</a>
             </div>
         </div>
     </header>
 
     <!-- Promo Banner -->
     <div class="promo-banner">
-        <div class="container promo-container">
-            <span class="promo-text">Share your elder care story with us and get early access!</span>
-            <a href="early-access.html" class="promo-link"><span class="promo-link-text">Join</span></a>
+        <div class="promo-container">
+            <span class="promo-text">Have thoughts about how to make the caregiving journey better?</span>
+            <a href="early-access.html" class="promo-link"><span class="promo-link-text">Share your story</span></a>
         </div>
     </div>
 
@@ -149,9 +148,9 @@
                 >
             </div>
             <div class="solo-shift-right">
-                <p class="solo-shift-subhead">You shouldn't have to do it all, or do it alone.</p>
+                <p class="solo-shift-subhead">Don't do it all. And don't do it alone.</p>
                 <p class="solo-shift-text">Elderella brings structure, memory, and support by organizing the chaos, remembering the details, and building your team.</p>
-                <a href="explore.html" class="btn-purple">How we do it</a>
+                <a href="explore.html" class="btn-purple">How we help</a>
             </div>
         </div>
     </section>
@@ -197,7 +196,7 @@
                     <span class="partner-pill">Ella</span>
                     <h2 class="partner-headline">Your caregiving partner</h2>
                     <p class="partner-text">Chat with Ella to capture care details as they happen. She remembers what you (and your care team) share and automatically detects and creates events, tasks, and medication entries so you don't have to.</p>
-                    <a href="#" class="btn-try-free">Try it for free</a>
+                    <a href="#" class="btn-try-free">Start for free</a>
                 </div>
             </div>
         </div>
@@ -211,7 +210,7 @@
                     <span class="responsibility-pill">Care Team</span>
                     <h2 class="responsibility-headline">Share responsibility</h2>
                     <p class="responsibility-text">Invite family, friends, and professionals so everyone on the care team is visible in one place. Set clear roles and permissions to control exactly what each person can see, and delegate tasks without disclosing private details.</p>
-                    <a href="#" class="btn-try-free">Try it for free</a>
+                    <a href="#" class="btn-try-free">Start for free</a>
                 </div>
                 <div class="responsibility-image">
                     <img
@@ -249,7 +248,7 @@
                     <span class="capture-pill">Notes & Documents</span>
                     <h2 class="capture-headline">Quickly capture, store & search</h2>
                     <p class="capture-text">Have all your caregiving information at your fingertips, without paper, binders, or digging. Record what's happening while you're attending an appointment, or walking back to your car, instead of trying to remember it all later.</p>
-                    <a href="#" class="btn-try-free">Try it for free</a>
+                    <a href="#" class="btn-try-free">Start for free</a>
                 </div>
             </div>
         </div>
@@ -263,7 +262,7 @@
                     <span class="meds-pill">Medications</span>
                     <h2 class="meds-headline">Know "all the meds"</h2>
                     <p class="meds-text">Just take a photo of the label (try it!) so you don't have to type everything in. Elderella auto-corrects medication names, sets reminders down to the hour, and can notify your care team about changes so everyone knows what's current.</p>
-                    <a href="#" class="btn-try-free">Try it for free</a>
+                    <a href="#" class="btn-try-free">Start for free</a>
                 </div>
                 <div class="meds-image">
                     <img
@@ -301,7 +300,7 @@
                     <span class="remember-pill">Tasks & Calendar</span>
                     <h2 class="remember-headline">Remember everything</h2>
                     <p class="remember-text">Elderella brings tasks and events together into one shared, caregiving-focused view, with assignable to-dos, recurring schedules, and gentle reminders so everyone knows what's coming up, who's doing what, and nothing slips through the cracks.</p>
-                    <a href="#" class="btn-try-free">Try it for free</a>
+                    <a href="#" class="btn-try-free">Start for free</a>
                 </div>
             </div>
         </div>
@@ -315,20 +314,7 @@
         </div>
     </section>
 
-    <!-- Quote Section -->
-    <section class="quotes">
-        <div class="container quotes-container">
-            <div class="quote-card">
-                <!-- Quote text to come -->
-            </div>
-            <div class="quote-card">
-                <!-- Quote text to come -->
-            </div>
-            <div class="quote-card">
-                <!-- Quote text to come -->
-            </div>
-        </div>
-    </section>
+    
 
     <!-- Keep on Top Section -->
     <section class="keep-on-top">
