v2: add accessible dropdown under 'Help for Family Caregivers' with 380px white panel (4px #D9D9D9, 20px radius), 40px icons, and responsive behavior; map items to Collects/Remembers/Shares. Update fonts to Merriweather Sans on v2 pages. Adjust image sizing rules and spacing; add cache-bypass for /v2/images in worker. Remove image shadows on pillar pages and add global cleanup where appropriate.

--- a/v2/shares.html
+++ b/v2/shares.html
@@ -10,7 +10,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400&family=Merriweather+Sans:wght@400;700&family=Source+Sans+Pro:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@400;700&family=Source+Sans+Pro:wght@400;500;600&display=swap" rel="stylesheet">
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/styles.css">
@@ -44,11 +44,13 @@
             <div class="feature-cards-grid">
                 <!-- Card 1: Identify care team -->
                 <div class="feature-card">
-                    <div class="feature-card-content">
-                        <h3 class="feature-card-title">Identify care team</h3>
-                        <p class="feature-card-text">Elderella spots people in your texts and notes and suggests them as care team members, so you can add them with a tap.</p>
+                    <div class="feature-card-overlay">
+                        <div class="feature-card-copy">
+                            <h3 class="feature-card-title">Identify care team</h3>
+                            <p class="feature-card-text">Elderella spots people in your texts and notes and suggests them as care team members, so you can add them with a tap.</p>
+                        </div>
                     </div>
-                    <div class="feature-card-image feature-card-image-stack">
+                    <div class="feature-card-illustration feature-card-image-stack">
                         <img
                             src="images/care-team-cardiologist.png"
                             srcset="images/care-team-cardiologist.png 1x, images/care-team-cardiologist@2x.png 2x"
@@ -84,11 +86,13 @@
 
                 <!-- Card 2: Invite care team -->
                 <div class="feature-card">
-                    <div class="feature-card-content">
-                        <h3 class="feature-card-title">Invite care team</h3>
-                        <p class="feature-card-text">Add someone with just a name and phone number, pick their role and access level, and Elderella sends a friendly text invite.</p>
+                    <div class="feature-card-overlay">
+                        <div class="feature-card-copy">
+                            <h3 class="feature-card-title">Invite care team</h3>
+                            <p class="feature-card-text">Add someone with just a name and phone number, pick their role and access level, and Elderella sends a friendly text invite.</p>
+                        </div>
                     </div>
-                    <div class="feature-card-image">
+                    <div class="feature-card-illustration">
                         <img
                             src="images/add-to-care-team.png"
                             srcset="images/add-to-care-team.png 1x, images/add-to-care-team@2x.png 2x"
@@ -103,11 +107,13 @@
 
                 <!-- Card 3: Care team information -->
                 <div class="feature-card">
-                    <div class="feature-card-content">
-                        <h3 class="feature-card-title">Care team information</h3>
-                        <p class="feature-card-text">See your whole care team on one screen, grouped by access level, with tap-to-call or email so you're not hunting through contacts.</p>
+                    <div class="feature-card-overlay">
+                        <div class="feature-card-copy">
+                            <h3 class="feature-card-title">Care team information</h3>
+                            <p class="feature-card-text">See your whole care team on one screen, grouped by access level, with tap-to-call or email so you're not hunting through contacts.</p>
+                        </div>
                     </div>
-                    <div class="feature-card-image feature-card-image-overlap">
+                    <div class="feature-card-illustration feature-card-image-overlap">
                         <img
                             src="images/care-team-caregivers.png"
                             srcset="images/care-team-caregivers.png 1x, images/care-team-caregivers@2x.png 2x"
@@ -133,11 +139,13 @@
 
                 <!-- Card 4: Delegate & remind -->
                 <div class="feature-card">
-                    <div class="feature-card-content">
-                        <h3 class="feature-card-title">Delegate & remind</h3>
-                        <p class="feature-card-text">Assign tasks and events, set due dates and reminders, and Elderella nudges people—and prompts for notes after visits—to keep the care story fresh.</p>
+                    <div class="feature-card-overlay">
+                        <div class="feature-card-copy">
+                            <h3 class="feature-card-title">Delegate & remind</h3>
+                            <p class="feature-card-text">Assign tasks and events, set due dates and reminders, and Elderella nudges people—and prompts for notes after visits—to keep the care story fresh.</p>
+                        </div>
                     </div>
-                    <div class="feature-card-image feature-card-image-overlap">
+                    <div class="feature-card-illustration feature-card-image-overlap">
                         <img
                             src="images/assign-to-care-team-member.png"
                             srcset="images/assign-to-care-team-member.png 1x, images/assign-to-care-team-member@2x.png 2x"
@@ -163,11 +171,13 @@
 
                 <!-- Card 5: Care team access levels -->
                 <div class="feature-card">
-                    <div class="feature-card-content">
-                        <h3 class="feature-card-title">Care team access levels</h3>
-                        <p class="feature-card-text">Choose from five access levels so each person only sees what they need, whether they're a primary caregiver, helper, or professional.</p>
+                    <div class="feature-card-overlay">
+                        <div class="feature-card-copy">
+                            <h3 class="feature-card-title">Care team access levels</h3>
+                            <p class="feature-card-text">Choose from five access levels so each person only sees what they need, whether they're a primary caregiver, helper, or professional.</p>
+                        </div>
                     </div>
-                    <div class="feature-card-image">
+                    <div class="feature-card-illustration">
                         <img
                             src="images/care-team-access-levels.png"
                             srcset="images/care-team-access-levels.png 1x, images/care-team-access-levels@2x.png 2x"
@@ -182,11 +192,13 @@
 
                 <!-- Card 6: Set what care team sees -->
                 <div class="feature-card">
-                    <div class="feature-card-content">
-                        <h3 class="feature-card-title">Set what care team sees</h3>
-                        <p class="feature-card-text">Mark any note, task, or event as "primary caregiver only," and choose who gets medication alerts, so you stay in control of what's shared.</p>
+                    <div class="feature-card-overlay">
+                        <div class="feature-card-copy">
+                            <h3 class="feature-card-title">Set what care team sees</h3>
+                            <p class="feature-card-text">Mark any note, task, or event as &quot;primary caregiver only,&quot; and choose who gets medication alerts, so you stay in control of what's shared.</p>
+                        </div>
                     </div>
-                    <div class="feature-card-image feature-card-image-stack">
+                    <div class="feature-card-illustration feature-card-image-stack">
                         <img
                             src="images/who-can-see-voice-note.png"
                             srcset="images/who-can-see-voice-note.png 1x, images/who-can-see-voice-note@2x.png 2x"
