--- a/v2/remembers.html
+++ b/v2/remembers.html
@@ -10,7 +10,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400&family=Merriweather+Sans:wght@400;700&family=Source+Sans+Pro:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@400;700&family=Source+Sans+Pro:wght@400;500;600&display=swap" rel="stylesheet">
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/styles.css">
@@ -44,11 +44,13 @@
             <div class="feature-cards-grid">
                 <!-- Card 1: Manage multiple elders -->
                 <div class="feature-card">
-                    <div class="feature-card-content">
-                        <h3 class="feature-card-title">Manage multiple elders</h3>
-                        <p class="feature-card-text">Keep all your elders in one place, and easily switch between their profiles without losing track of who needs what when.</p>
+                    <div class="feature-card-overlay">
+                        <div class="feature-card-copy">
+                            <h3 class="feature-card-title">Manage multiple elders</h3>
+                            <p class="feature-card-text">Keep all your elders in one place, and easily switch between their profiles without losing track of who needs what when.</p>
+                        </div>
                     </div>
-                    <div class="feature-card-image feature-card-image-overlap">
+                    <div class="feature-card-illustration feature-card-image-overlap">
                         <img
                             src="images/manage-multiple-elders.png"
                             srcset="images/manage-multiple-elders.png 1x, images/manage-multiple-elders@2x.png 2x"
@@ -74,11 +76,13 @@
 
                 <!-- Card 2: Know what's next -->
                 <div class="feature-card">
-                    <div class="feature-card-content">
-                        <h3 class="feature-card-title">Know what's next</h3>
-                        <p class="feature-card-text">Your "What's Next" view shows the most pressing tasks and closest events at a glance, so you can stop wondering what you're forgetting.</p>
+                    <div class="feature-card-overlay">
+                        <div class="feature-card-copy">
+                            <h3 class="feature-card-title">Know what's next</h3>
+                            <p class="feature-card-text">Your \"What's Next\" view shows the most pressing tasks and closest events at a glance, so you can stop wondering what you're forgetting.</p>
+                        </div>
                     </div>
-                    <div class="feature-card-image">
+                    <div class="feature-card-illustration">
                         <img
                             src="images/whats-next-care.png"
                             srcset="images/whats-next-care.png 1x, images/whats-next-care@2x.png 2x"
@@ -93,11 +97,13 @@
 
                 <!-- Card 3: See upcoming care needs -->
                 <div class="feature-card">
-                    <div class="feature-card-content">
-                        <h3 class="feature-card-title">See upcoming care needs</h3>
-                        <p class="feature-card-text">Sync your calendar and let Elderella line up visits, reminders, and follow-ups so you can see what's coming before it hits. Note: Elderella only syncs events related to your elder.</p>
+                    <div class="feature-card-overlay">
+                        <div class="feature-card-copy">
+                            <h3 class="feature-card-title">See upcoming care needs</h3>
+                            <p class="feature-card-text">Sync your calendar and let Elderella line up visits, reminders, and follow-ups so you can see what's coming before it hits. Note: Elderella only syncs events related to your elder.</p>
+                        </div>
                     </div>
-                    <div class="feature-card-image feature-card-image-overlap">
+                    <div class="feature-card-illustration feature-card-image-overlap">
                         <img
                             src="images/care-calendar.png"
                             srcset="images/care-calendar.png 1x, images/care-calendar@2x.png 2x"
@@ -123,11 +129,13 @@
 
                 <!-- Card 4: Ask Ella -->
                 <div class="feature-card">
-                    <div class="feature-card-content">
-                        <h3 class="feature-card-title">Ask Ella</h3>
-                        <p class="feature-card-text">Ask Ella for what you need, "When was Dad's last fall?" or "What changed this week?", and she'll pull the answer from the care story in seconds.</p>
+                    <div class="feature-card-overlay">
+                        <div class="feature-card-copy">
+                            <h3 class="feature-card-title">Ask Ella</h3>
+                            <p class="feature-card-text">Ask Ella for what you need, &quot;When was Dad's last fall?&quot; or &quot;What changed this week?&quot;, and she'll pull the answer from the care story in seconds.</p>
+                        </div>
                     </div>
-                    <div class="feature-card-image">
+                    <div class="feature-card-illustration">
                         <img
                             src="images/chat-with-ella.png"
                             srcset="images/chat-with-ella.png 1x, images/chat-with-ella@2x.png 2x"
@@ -142,11 +150,13 @@
 
                 <!-- Card 5: Get care team updates -->
                 <div class="feature-card">
-                    <div class="feature-card-content">
-                        <h3 class="feature-card-title">Get care team updates</h3>
-                        <p class="feature-card-text">Get a simple, scrollable digest of everything your care team has done: notes, tasks, visits, and changes. Catch up in seconds instead of piecing it together.</p>
+                    <div class="feature-card-overlay">
+                        <div class="feature-card-copy">
+                            <h3 class="feature-card-title">Get care team updates</h3>
+                            <p class="feature-card-text">Get a simple, scrollable digest of everything your care team has done: notes, tasks, visits, and changes. Catch up in seconds instead of piecing it together.</p>
+                        </div>
                     </div>
-                    <div class="feature-card-image">
+                    <div class="feature-card-illustration">
                         <img
                             src="images/care-team-updates.png"
                             srcset="images/care-team-updates.png 1x, images/care-team-updates@2x.png 2x"
@@ -161,11 +171,13 @@
 
                 <!-- Card 6: Medication information -->
                 <div class="feature-card">
-                    <div class="feature-card-content">
-                        <h3 class="feature-card-title">Medication information</h3>
-                        <p class="feature-card-text">Open the meds tab to see a clean, current list of medications, doses, and schedules, so you're never scrambling to remember. Set reminders so you never miss a dose.</p>
+                    <div class="feature-card-overlay">
+                        <div class="feature-card-copy">
+                            <h3 class="feature-card-title">Medication information</h3>
+                            <p class="feature-card-text">Open the meds tab to see a clean, current list of medications, doses, and schedules, so you're never scrambling to remember. Set reminders so you never miss a dose.</p>
+                        </div>
                     </div>
-                    <div class="feature-card-image feature-card-image-overlap">
+                    <div class="feature-card-illustration feature-card-image-overlap">
                         <img
                             src="images/medication-list.png"
                             srcset="images/medication-list.png 1x, images/medication-list@2x.png 2x"
