--- a/v2/how-elderella-works.html
+++ b/v2/how-elderella-works.html
@@ -81,7 +81,7 @@
                     </div>
                     <h3 class="step-headline">Elderella <span class="step-headline-bold">collects</span> care details</h3>
                     <p class="step-text">Ella automatically detects and organizes care information from your conversations. Medications, appointments, tasks, and care team members are captured without any extra effort.</p>
-                    <a href="collects.html" class="btn-learn-more">Learn more</a>
+                    <a href="collects-care-details.html" class="btn-learn-more">Learn more</a>
                 </div>
                 <div class="step-image step-image-stack">
                     <img
@@ -133,7 +133,7 @@
                     </div>
                     <h3 class="step-headline">Ella <span class="step-headline-bold">remembers and reminds</span></h3>
                     <p class="step-text">Ask Ella anything about your loved one's care. She remembers medications, appointments, and preferences so you don't have to. Get gentle reminders before important events.</p>
-                    <a href="remembers.html" class="btn-learn-more">Learn more</a>
+                    <a href="remembers-and-reminds.html" class="btn-learn-more">Learn more</a>
                 </div>
                 <div class="step-image">
                     <img
@@ -165,7 +165,7 @@
                     </div>
                     <h3 class="step-headline">Elderella <span class="step-headline-bold">shares the load</span></h3>
                     <p class="step-text">Invite family, friends, and professionals to your care team. Everyone stays informed with the right level of access, and tasks can be delegated without endless phone calls.</p>
-                    <a href="shares.html" class="btn-learn-more">Learn more</a>
+                    <a href="shares-the-load.html" class="btn-learn-more">Learn more</a>
                 </div>
                 <div class="step-image step-image-stack">
                     <img
@@ -198,9 +198,9 @@
         <div class="container">
             <h2 class="help-tabs-title">Help for family caregivers</h2>
             <div class="help-tabs">
-                <a href="collects.html" class="help-tab-link">Collects care details</a>
-                <a href="remembers.html" class="help-tab-link">Remembers and reminds</a>
-                <a href="shares.html" class="help-tab-link">Shares the load</a>
+                <a href="collects-care-details.html" class="help-tab-link">Collects care details</a>
+                <a href="remembers-and-reminds.html" class="help-tab-link">Remembers and reminds</a>
+                <a href="shares-the-load.html" class="help-tab-link">Shares the load</a>
             </div>
         </div>
     </section>
