--- a/v2/shares-the-load.html
+++ b/v2/shares-the-load.html
@@ -31,9 +31,9 @@
     <section class="product-tabs-section">
         <div class="container">
             <div class="product-tabs">
-                <a href="collects.html" class="product-tab-link">Collects care details</a>
-                <a href="remembers.html" class="product-tab-link">Remembers and reminds</a>
-                <a href="shares.html" class="product-tab-link active">Shares the load</a>
+                <a href="collects-care-details.html" class="product-tab-link">Collects care details</a>
+                <a href="remembers-and-reminds.html" class="product-tab-link">Remembers and reminds</a>
+                <a href="shares-the-load.html" class="product-tab-link active">Shares the load</a>
             </div>
         </div>
     </section>
@@ -240,9 +240,9 @@
         <div class="container">
             <h2 class="help-tabs-title">Help for family caregivers</h2>
             <div class="help-tabs">
-                <a href="collects.html" class="help-tab-link">Collects care details</a>
-                <a href="remembers.html" class="help-tab-link">Remembers and reminds</a>
-                <a href="shares.html" class="help-tab-link active">Shares the load</a>
+                <a href="collects-care-details.html" class="help-tab-link">Collects care details</a>
+                <a href="remembers-and-reminds.html" class="help-tab-link">Remembers and reminds</a>
+                <a href="shares-the-load.html" class="help-tab-link active">Shares the load</a>
             </div>
         </div>
     </section>
